Fixed off-center text bug in button.

--- a/src/Components/PlayArea/style.css
+++ b/src/Components/PlayArea/style.css
@@ -117,6 +117,7 @@ html{
         width: 150px;
         margin-top: 10px;
         margin-bottom: 10px;
+        text-align: center;
     }
     
     .text-form-input{
